# vaal-rs

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: error.rs  lib.rs
vaal-sys/: Cargo.toml  README.md  build.rs  update.sh  vaal.h
vaal-sys/src/: ffi.rs
