[package]
name = "vaal"
description = "DeepView Visual AI Acceleration Library (VAAL) provides a highly-optimized and easy-to-use framework for running various vision-based AI/ML models on embedded hardware."
authors = ["Au-Zone Technologies"]
readme = "README.md"
license = "AGPL-3.0"
homepage = "https://support.deepviewml.com"
repository = "https://github.com/DeepViewML/vaal-rs"
documentation = "https://docs.rs/vaal"
keywords = ["vaal", "visionpack"]
categories = ["computer-vision", "multimedia::video", "api-bindings"]
version = "0.0.0"
edition = "2021"

exclude = [
    "/.github/*",
    "/.gitattributes",
    "/clippy.toml",
    "/codecov.yml",
]

[lib]
name = "vaal"

[workspace]
members = ["vaal-sys"]

[dependencies]
vaal-sys = {version = "0.0.0", path = "vaal-sys"}
deepviewrt = "^0.2.0"
