[package]
name = "vaal-sys"
description = "Low-level FFI bindings for VAAL Library"
authors = ["Au-Zone Technologies"]
readme = "README"
license-file = "LICENSE.txt"
license = "AGPL-3.0"
homepage = "https://support.deepviewml.com"
repository = "https://github.com/DeepViewML/vaal-rs"
documentation = "https://docs.rs/vaal"
keywords = ["vaal", "visionpack"]
categories = ["computer-vision", "multimedia::video", "api-bindings"]
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "^0.2"
